<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="close_edit">Close Edit</string>
    <string name="edit_post_text">Edit Post</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="like">Like</string>
    <string name="save_content">Save</string>
    <string name="add_new_post">Add post</string>
    <string name="chooser_share_post">Share</string>
</resources>